<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <!-- Copyright (c) 2018 ModelSolv, Inc. and others. All rights reserved. 
	 This program and the accompanying materials are made available under the 
	 terms of the Eclipse Public License v1.0 which accompanies this distribution, 
	 and is available at http://www.eclipse.org/legal/epl-v10.html Contributors: 
	 ModelSolv, Inc. - initial API and implementation and/or initial documentation -->
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.reprezen.rapidml</groupId>
    <artifactId>com.reprezen.rapidml.parent</artifactId>
    <version>0.0.2-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>RAPID-ML</name>
    <description>Parser and Model for RAPID-ML modeling language</description>
    <url>http://rapid-api.org/rapid-ml/index.html</url>
    
    <properties>
	<xtextVersion>2.9.2</xtextVersion>
	<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	<maven.compiler.source>1.8</maven.compiler.source>
	<maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <modules>
	<module>com.reprezen.rapidml.realization</module>
	<module>com.reprezen.rapidml.model</module>
	<module>com.reprezen.rapidml</module>
	<module>com.reprezen.rapidml.ide</module>
    </modules>
    <licenses>
	<license>
	    <name>Eclipse Public License - Version 1.0</name>
	    <url>https://www.eclipse.org/legal/epl-v10.html</url>
	</license>
    </licenses>
    <developers>
	<developer>
	    <name>Andy Lowry</name>
	    <email>andy.lowry@reprezen.com</email>
	    <organization>RepreZen</organization>
	    <organizationUrl>https://www.reprezen.com</organizationUrl>
	</developer>
	<developer>
	    <name>Guillaume Hillairet</name>
	    <email>g.hillairet@gmail.com</email>
	    <organization>RepreZen</organization>
	    <organizationUrl>https://www.reprezen.com</organizationUrl>
	</developer>
	<developer>
	    <name>Tatiana Fesenko</name>
	    <email>tatiana.fesenko@reprezen.com</email>
	    <organization>RepreZen</organization>
	    <organizationUrl>https://www.reprezen.com</organizationUrl>
	</developer>
    </developers>
    <scm>
	<connection>git@github.com:RepreZen/RAPID-ML.git</connection>
	<developerConnection>scm:git:https://github.com/RepreZen/RAPID-ML</developerConnection>
	<url>https://github.com/RepreZen/RAPID-ML/tree/master</url>
	<tag>HEAD</tag>
    </scm>
    <build>
	<pluginManagement>
	    <plugins>
		<plugin>
		    <groupId>org.eclipse.xtend</groupId>
		    <artifactId>xtend-maven-plugin</artifactId>
		    <version>${xtextVersion}</version>
		    <executions>
			<execution>
			    <goals>
				<goal>compile</goal>
				<goal>xtend-install-debug-info</goal>
				<goal>testCompile</goal>
				<goal>xtend-test-install-debug-info</goal>
			    </goals>
			</execution>
		    </executions>
		    <configuration>
			<outputDirectory>${basedir}/src/main/xtend-gen</outputDirectory>
			<testOutputDirectory>${basedir}/src/test/xtend-gen</testOutputDirectory>
		    </configuration>
		</plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-clean-plugin</artifactId>
		    <version>2.5</version>
		    <configuration>
			<filesets>
			    <fileset>
				<directory>${basedir}/src/main/xtend-gen</directory>
				<includes>
				    <include>**/*</include>
				</includes>
				<directory>${basedir}/src/test/xtend-gen</directory>
				<includes>
				    <include>**/*</include>
				</includes>
			    </fileset>
			</filesets>
		    </configuration>
		</plugin>
		<plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-jar-plugin</artifactId>
		    <configuration>
			<archive>
			    <!-- This actually causes the manifest file to be computed properly, 
				 but mysteriously, it breaks the build of cmr.reprezen.rapidml project. -->
			    <!-- <manifestFile>${project.basedir}/META-INF/MANIFEST.MF</manifestFile> -->
			</archive>
		    </configuration>
		</plugin>
	    </plugins>
	</pluginManagement>
	<plugins>
	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-release-plugin</artifactId>
		<version>2.5.3</version>
		<configuration>
		    <tagNameFormat>v@{project.version}</tagNameFormat>
		    <autoVersionSubmodules>true</autoVersionSubmodules>
		    <releaseProfiles>releases</releaseProfiles>
		</configuration>
	    </plugin>
	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-source-plugin</artifactId>
		<version>3.0.1</version>
		<executions>
		    <execution>
			<id>attach-sources</id>
			<goals>
			    <goal>jar</goal>
			</goals>
		    </execution>
		</executions>
	    </plugin>
	    <plugin>
		<groupId>org.apache.maven.plugins</groupId>
		<artifactId>maven-javadoc-plugin</artifactId>
		<version>3.0.1</version>
		<configuration>
		    <!-- Until we have time to actually fix things -->
		    <doclint>none</doclint>
		    <additionalparam>-Xdoclint:none</additionalparam>
		    <additionalJOption>-Xdoclint:none</additionalJOption>
		</configuration>
		<executions>
		    <execution>
			<id>attach-javadocs</id>
			<goals>
			    <goal>jar</goal>
			</goals>
		    </execution>
		</executions>
	    </plugin>
	</plugins>
    </build>
    <repositories>
	<repository>
	    <id>codehaus-snapshots</id>
	    <name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
	    <url>http://nexus.codehaus.org/snapshots/</url>
	    <releases>
		<enabled>false</enabled>
	    </releases>
	    <snapshots>
		<enabled>false</enabled>
	    </snapshots>
	</repository>
    </repositories>
    <pluginRepositories>
	<pluginRepository>
	    <id>codehaus-snapshots</id>
	    <name>disable dead 'Codehaus Snapshots' repository, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=481478</name>
	    <url>http://nexus.codehaus.org/snapshots/</url>
	    <releases>
		<enabled>false</enabled>
	    </releases>
	    <snapshots>
		<enabled>false</enabled>
	    </snapshots>
	</pluginRepository>
    </pluginRepositories>
    <profiles>
	<profile>
	    <id>macos</id>
	    <activation>
		<os>
		    <family>mac</family>
		</os>
	    </activation>
	    <properties>
		<!-- THE FOLLOWING LINE MUST NOT BE BROKEN BY AUTOFORMATTING -->
		<platformSystemProperties>-XstartOnFirstThread</platformSystemProperties>
	    </properties>
	</profile>
	<profile>
	    <id>jdk9-or-newer</id>
	    <activation>
		<jdk>[9,)</jdk>
	    </activation>
	    <properties>
		<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
	    </properties>
	</profile>
	<profile>
	    <id>gpg</id>
	    <build>
		<plugins>
		    <plugin>
			<groupId>org.apache.maven.plugins</groupId>
			<artifactId>maven-gpg-plugin</artifactId>
			<executions>
			    <execution>
				<id>sign-artifacts</id>
				<phase>verify</phase>
				<goals>
				    <goal>sign</goal>
				</goals>
			    </execution>
			</executions>
		    </plugin>
		</plugins>
	    </build>
	</profile>
	<profile>
	    <id>releases</id>
	    <build>
		<plugins>
		    <plugin>
			<groupId>org.sonatype.plugins</groupId>
			<artifactId>nexus-staging-maven-plugin</artifactId>
			<version>1.6.7</version>
			<extensions>true</extensions>
			<configuration>
			    <serverId>ossrh</serverId>
			    <nexusUrl>https://oss.sonatype.org/</nexusUrl>
			    <autoReleaseAfterClose>${nexus.autorelease}</autoReleaseAfterClose>
			    <autoDropAfterRelease>${nexus.autodrop}</autoDropAfterRelease>
			</configuration>
		    </plugin>
		</plugins>
	    </build>
	</profile>
    </profiles>
    <dependencies>
	<dependency>
	    <groupId>org.eclipse.xtext</groupId>
	    <artifactId>org.eclipse.xtext</artifactId>
	    <version>${xtextVersion}</version>
	    <exclusions>
		<exclusion>
		    <groupId>org.eclipse.equinox</groupId>
		    <artifactId>org.eclipse.equinox.common</artifactId>
		</exclusion>
	    </exclusions>
	</dependency>
    </dependencies>
</project>
